--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "node-docker",
+  "name": "Web Components",
   "version": "0.1.0",
-  "description": "Startup template development enviroment for node and express using docker",
+  "description": "Personalized Web Components library",
   "main": "api/index.js",
   "scripts": {
     "build": "rimraf dist/ && babel api -d dist --copy-files",
@@ -20,7 +20,7 @@
   },
   "author": "Henry Valbuena <dev.henryvm@gmail.com>",
   "license": "MIT",
-  "repository": "repository",
+  "repository": "https://github.com/henryvalbuena/web-components.git",
   "devDependencies": {
     "@babel/cli": "^7.5.0",
     "@babel/core": "^7.5.4",
@@ -35,19 +35,12 @@
     "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "husky": "^3.0.0",
-    "lodash.clonedeep": "^4.5.0",
-    "lodash.isequal": "^4.5.0",
     "mocha": "^6.2.0",
     "nodemon": "^1.19.1",
     "rimraf": "^2.6.3",
     "sinon": "^7.4.1"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.4.4",
-    "ajv": "^6.10.2",
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "pg": "^7.12.1",
-    "superagent": "^5.1.0"
+    "@babel/polyfill": "^7.4.4"
   }
 }
