--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Web Components",
+  "name": "web-components",
   "version": "0.1.0",
   "description": "Personalized Web Components library",
   "main": "api/index.js",
@@ -31,9 +31,9 @@
     "dotenv-cli": "^2.0.1",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.1",
-    "eslint-plugin-react": "^7.14.2",
     "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.2",
     "husky": "^3.0.0",
     "mocha": "^6.2.0",
     "nodemon": "^1.19.1",
@@ -41,6 +41,7 @@
     "sinon": "^7.4.1"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.4.4"
+    "@babel/polyfill": "^7.4.4",
+    "express": "^4.17.1"
   }
 }
